toggle function for markes working

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
             <h4 class="active" id="cite-marker-btn">Cites</h4>
             <h4 class="active" id="restaurant-marker-btn">Restaurants</h4>
         </div>
+        <div id="sideMenu-info">
+
+        </div>
     </div>
 </div>
 
