--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,14 @@
 <div id="mainContent">
     <div id='map'></div>
 
-    <h1 id="header">Where to go?</h1>
-    <div id="sideMenu">
-        <div id="map-markers-menu">
-            <h4 class="active" id="hostel-marker-btn">Hostels</h4>
-            <h4 class="active" id="cite-marker-btn">Cites</h4>
-            <h4 class="active" id="restaurant-marker-btn">Restaurants</h4>
-        </div>
+    <h1 id="header"> Where to go? </h1>
+    <div id="map-markers-menu">
+        <img src="../img/hostel.png" class="active" id="hostel-marker-btn"></img>
+        <img src="../img/cite.png" class="active" id="cite-marker-btn"></img>
+        <img src="../img/restaurant.png" class="active" id="restaurant-marker-btn"></img>
+    </div>
+    <div id="sideMenu" class="hide">
         <div id="sideMenu-info">
-
         </div>
     </div>
 </div>
@@ -96,11 +95,6 @@
 <script type="text/javascript" src="js/elements.js"></script>
 <script type="text/javascript" src="js/form.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
-<script src="https://www.gstatic.com/firebasejs/3.6.10/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/3.6.10/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/3.6.10/firebase-database.js"></script>
-<script src="https://www.gstatic.com/firebasejs/3.6.10/firebase-messaging.js"></script>
 
 </body>
 </html>
