places added, with starts in map, but possible differnt image for side menu

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
         <img src="../img/hostel.png" class="active" id="hostel-marker-btn"></img>
         <img src="../img/cite.png" class="active" id="cite-marker-btn"></img>
         <img src="../img/restaurant.png" class="active" id="restaurant-marker-btn"></img>
+        <img src="http://weknownyourdreamz.com/images/star/star-04.jpg" class="active" id="place-marker-btn"></img>
     </div>
     <div id="sideMenu" class="hide">
         <div id="sideMenu-info">
@@ -56,6 +57,7 @@
             <li id="hostel-btn" class="active">Hostel</li>
             <li id="cite-btn">Cite</li>
             <li id="restaurant-btn">Restaurant</li>
+            <li id="place-btn">Place</li>
         </ul>
     </div>
     <div id="hostel" class="input-div">
@@ -85,6 +87,15 @@
         <input id="restaurants-form-lat"placeholder="Latitude"></input>
         <input id="restaurants-form-long"placeholder="Longitude"></input>
     </div>
+    <div id="place" class="input-div hide">
+        <input id="places-form-name"placeholder="Place name"></input>
+        <input id="places-form-score"placeholder="Rating"></input>
+        <input id="places-form-link"placeholder="Link"></input>
+        <input id="places-form-img"placeholder="Image url"></input>
+        <input id="places-form-comment"placeholder="Comment"></input>
+        <input id="places-form-lat"placeholder="Latitude"></input>
+        <input id="places-form-long"placeholder="Longitude"></input>
+    </div>
     <button id="saveNewElement-form-btn"> Add element </button>
 </div>
 
@@ -94,7 +105,6 @@
 <script type="text/javascript" src="js/popup.js"></script>
 <script type="text/javascript" src="js/elements.js"></script>
 <script type="text/javascript" src="js/form.js"></script>
-
 
 </body>
 </html>
