--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <title>Where to go</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.32.1/mapbox-gl.js'></script>
-    <!-- <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.24.0/mapbox-gl.js'></script> -->
     <script src="https://unpkg.com/github-api/dist/GitHub.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <!-- <script src="geosearch/bundle.min.js"></script> -->
     <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.0.1/mapbox-gl-geocoder.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.24.0/mapbox-gl.css' rel='stylesheet' />
     <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.0.1/mapbox-gl-geocoder.css' type='text/css' />
@@ -26,9 +24,9 @@
 
     <h1 id="header"> Where to go? </h1>
     <div id="map-markers-menu">
-        <img src="../img/hostel.png" class="active" id="hostel-marker-btn"></img>
-        <img src="../img/cite.png" class="active" id="cite-marker-btn"></img>
-        <img src="../img/restaurant.png" class="active" id="restaurant-marker-btn"></img>
+        <img src="../img/hostel.png" class="disable" id="hostel-marker-btn"></img>
+        <img src="../img/cite.png" class="disable" id="cite-marker-btn"></img>
+        <img src="../img/restaurant.png" class="disable" id="restaurant-marker-btn"></img>
         <img src="http://weknownyourdreamz.com/images/star/star-04.jpg" class="active" id="place-marker-btn"></img>
     </div>
     <div id="sideMenu" class="hide">
