margin bug fixed, favicon added

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNMgfdR0PzYVT9-7rFDStD7RIz7kgZ-xU&libraries=places"></script>
     <!-- <script src="https://maps.google.com/maps?file=api&amp;v=3&amp;sensor=false"type="text/javascript"></script> -->
 
+    <link rel="shortcut icon" type="image/png" href="https://www.itewiki.fi/images/info2/paikkatieto-gis.png"/>
+
     <link href='/styles/main.min.css' rel='stylesheet' />
     <link href='/styles/markers.min.css' rel='stylesheet' />
     <link href='/styles/sideMenu.min.css' rel='stylesheet' />
